--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "bootstrap": "5.1.3",
+    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
@@ -48,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
     "@types/react-router-dom": "^5.3.1"
   }
 }
