--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "short-sentences",
+  "homepage": "https://gnikolaev-bwt.github.io/short-sentences-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,6 +20,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -29,7 +28,8 @@
     "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +51,8 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-query": "^1.2.9",
+    "@types/react-router-dom": "^5.3.1",
+    "gh-pages": "^3.2.3"
   }
 }
