--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,17 @@
-image: node
+image: node:7.9.0
+
+cache:
+  paths:
+    - node_modules/
+
+before_script:
+  - yarn install
 
 pages:
   stage: deploy
-  cache:
-    paths:
-      - node_modules/
   script:
-    - npm install
-    - npm run build
+    - CI=true yarn build
     - rm -rf public
-    - cp build/index.html build/404.html
     - mv build public
   artifacts:
     paths:
