--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "short-sentences",
-  "homepage": "short-sentences",
+  "homepage": "https://gnikolaev-bwt.github.io/react-gh-pages/short-sentences-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -27,7 +27,9 @@
   "scripts": {
     "start": "cross-env BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,6 +52,7 @@
   "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@types/react-query": "^1.2.9",
-    "@types/react-router-dom": "^5.3.1"
+    "@types/react-router-dom": "^5.3.1",
+    "gh-pages": "^3.2.3"
   }
 }
