--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "short-sentences",
-  "homepage": "http://gnikolaev-bwt.github.io/short-sentences-front",
+  "homepage": "https://gnikolaev-bwt.github.io/short-sentences-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
