--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "axios": "^0.24.0",
     "bootstrap": "5.1.3",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/classnames": "^2.3.1",
     "@types/react-query": "^1.2.9",
     "@types/react-router-dom": "^5.3.1",
