Homepage for gh-pages

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "short-sentences",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gnikolaev-bwt.github.io/short-sentences-front",
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "@testing-library/jest-dom": "^5.11.4",
